fixed issue where extra padding and margins were throwing off code block formatting

--- a/themes/sam/sass/style.sass
+++ b/themes/sam/sass/style.sass
@@ -227,10 +227,14 @@ section.post-footer
   .linenodiv
     margin-bottom: 0
   
-#content code
+#content 
+  code
     //white-space: pre
     margin: 0 0.2em
     padding: 0 0.3em
+  code[data-lang]
+    margin: 0
+    padding: 0
 
 .headerDescription
   & h1,h2,h3
